Added Spring Aspect and logging